Se organiza el ejercicio